--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
+    </ul>
   </body>
 
 </html>
