Adjust image width

--- a/recipes/tuscan.html
+++ b/recipes/tuscan.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Tuscan Flank Steak</h1>
-    <img src="../img/steak.jpg" alt="A delicious steak">
+    <img src="../img/steak.jpg" alt="A delicious steak" width="500">
     <h3>I've only been to Tuscany once, but I do remember a grilled steak coming off a charcoal fire, which was then sliced and splashed with olive oil, lemon, and rosemary. While I'm sure my version is far from traditional, it's really tasty and the very user-friendly flank steak is the perfect cut. </h3>
     <h3>Ingredients</h3>
     <ul>
