--- a/recipes/tuscan.html
+++ b/recipes/tuscan.html
@@ -8,7 +8,7 @@
     <h1>Tuscan Flank Steak</h1>
     <img src="../img/steak.jpg" alt="A delicious steak" width="500">
     <h3>I've only been to Tuscany once, but I do remember a grilled steak coming off a charcoal fire, which was then sliced and splashed with olive oil, lemon, and rosemary. While I'm sure my version is far from traditional, it's really tasty and the very user-friendly flank steak is the perfect cut. </h3>
-    <h3>Ingredients</h3>
+    <h3>Ingredients:</h3>
     <ul>
       <li>½ cup chopped flesh rosemary</li>
       <li>6 cloves garlic</li>
@@ -26,7 +26,7 @@
       <li>1 pinch salt</li>
       <li>1 sprig fresh rosemary</li>
     </ul>
-    <h3>Steps</h3>
+    <h3>Steps:</h3>
     <ol>
       <li>Combine 1/2 cup chopped fresh rosemary, garlic, 1/3 cup olive oil, 1/4 cup lemon juice, black pepper, 1/2 teaspoon red pepper flakes, and 1/2 teaspoon salt in a blender or food processor. Blend until smooth and set marinade aside.</li>
       <li>Pierce the steak with a fork 20 to 30 times. Place in a shallow baking dish. Pour marinade over steak and flip to coat both sides. Cover and refrigerate for 4 to 8 hours.</li>
