--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
+      <li><a href="./recipes/shrimp.html">Garlic Shrimp Kabobs</a></li>
     </ul>
   </body>
 
