--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
       <li><a href="./recipes/shrimp.html">Garlic Shrimp Kabobs</a></li>
+      <li><a href="./recipes/spaghetti.html">Spaghetti with Tomato Sauce</a></li>
     </ul>
   </body>
 
