Fix wrong placement of description

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>A wonderful homemade tomato sauce made from fresh tomatoes, onion, garlic, and herbs. Serve over spaghetti noodles, or use in your favorite lasagna recipe.</h1>
+    <h1>Spaghetti Sauce with Fresh Tomatoes</h1>
     <img src="../img/spaghetti.jpg" alt="tomato sauce pasta" width="500">
+    <h3>A wonderful homemade tomato sauce made from fresh tomatoes, onion, garlic, and herbs. Serve over spaghetti noodles, or use in your favorite lasagna recipe.</h3>
     <h3>Ingredients:</h3>
     <ul>
       <li>Fresh Tomatoes</li>
