--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <h3>Delicious recipes that I most certainly enjoy.</h3>
     <ul>
       <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
       <li><a href="./recipes/shrimp.html">Garlic Shrimp Kabobs</a></li>
