--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="./img/cook.jpg" alt="handsome cook">
+    <img src="./img/cook.jpg" alt="handsome cook" width="700">
     <h3>Delicious recipes that I most certainly enjoy.</h3>
     <ul>
       <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
