Add css to website

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Spaghetti Sauce</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-    <h1>Spaghetti Sauce with Fresh Tomatoes</h1>
-    <img src="../img/spaghetti.jpg" alt="tomato sauce pasta" width="500">
-    <h3>A wonderful homemade tomato sauce made from fresh tomatoes, onion, garlic, and herbs. Serve over spaghetti noodles, or use in your favorite lasagna recipe.</h3>
-    <h3>Ingredients:</h3>
+    <h1 class="header">Spaghetti Sauce with Fresh Tomatoes</h1>
+    <div>
+      <img class="display small" src="../img/spaghetti.jpg" alt="tomato sauce pasta">
+    </div>
+    <h3 class="em">A wonderful homemade tomato sauce made from fresh tomatoes, onion, garlic, and herbs. Serve over spaghetti noodles, or use in your favorite lasagna recipe.</h3>
+    <h3 class="topics">Ingredients:</h3>
     <ul>
       <li>Fresh Tomatoes</li>
       <li>White sugar</li>
@@ -15,7 +19,7 @@
       <li>Garlic powder, basil, parsley, salt.</li>
       <li>Spaghetti</li>
     </ul>
-    <h3>Steps:</h3>
+    <h3 class="topics">Steps:</h3>
     <ol>
       <li>Peel and chop the tomatoes</li>
       <li>Cook the onion and garlic on olive oil (5 minutes)</li>
