--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta chatset="utf-8">
     <title>Recipe Book</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <img src="./img/cook.jpg" alt="handsome cook" width="700">
-    <h3>Delicious recipes that I most certainly enjoy.</h3>
+    <h1 class="header">Odin Recipes</h1>
+    <div>
+      <img class="display" src="./img/cook.jpg" alt="handsome cook">
+    </div>
+    <h3 class="header middle">Delicious recipes I prepared with much love and care.</h3>
     <ul>
-      <li><a href="./recipes/tuscan.html">Tuscan Steak</a></li>
-      <li><a href="./recipes/shrimp.html">Garlic Shrimp Kabobs</a></li>
-      <li><a href="./recipes/spaghetti.html">Spaghetti with Tomato Sauce</a></li>
+      <li class="fancy"><a class="fancier" href="./recipes/tuscan.html">Tuscan Steak</a></li>
+      <li class="fancy"><a class="fancier" href="./recipes/shrimp.html">Garlic Shrimp Kabobs</a></li>
+      <li class="fancy"><a class="fancier" href="./recipes/spaghetti.html">Spaghetti with Tomato Sauce</a></li>
     </ul>
   </body>
 
