--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Delicious Shrimp</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-    <h1>Garlic Shrimp Kabobs</h1>
-    <img src="../img/shrimp.jpg" alt="kabobs shrimp" width="500">
-    <h3>This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</h3>
-    <h3>Ingredients:</h3>
+    <h1 class="header">Garlic Shrimp Kabobs</h1>
+    <div><img class="display small" src="../img/shrimp.jpg" alt="kabobs shrimp"></div>
+    <h3 class="em">This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</h3>
+    <h3 class="topics">Ingredients:</h3>
     <ul>
       <li>1 pound frozen shrimp, thawed and peeled</li>
       <li>¼ cup olive oil</li>
@@ -19,7 +20,7 @@
       <li>Metal skewers</li>
       <li>Cooking spray</li>
     </ul>
-    <h3>Steps:</h3>
+    <h3 class="topics">Steps:</h3>
     <ol>
       <li>Rinse and dry shrimp.</li>
       <li>Whisk olive oil, garlic, lemon juice, pepper, and parsley together in a bowl and pour into a large resealable plastic bag. Add shrimp, coat with the marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for 2 hours.</li>
@@ -27,7 +28,7 @@
       <li>Remove shrimp from the marinade and shake off excess. Discard the remaining marinade. Place about 5 shrimp on each skewer.</li>
       <li>Cook on the preheated grill until shrimp are bright pink on the outside and the meat is opaque, about 5 minutes; do not overcook.</li>
     </ol>
-    <h4>Observation:</h4>
-    <p>Wooden skewers may be substituted for metal skewers, if desired. Before using, soak wooden skewers in water for15 minutes to prevent them from catching on fire on the grill.</p>
+    <h4 class="topics small">Observation:</h4>
+    <p class="obs">Wooden skewers may be substituted for metal skewers, if desired. Before using, soak wooden skewers in water for 15 minutes to prevent them from catching on fire on the grill.</p>
   </body>
 </html>
